--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8"/>
         <title> Personal Blog Four You </title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href ="assets/css/blog.css">
+        <link rel="stylesheet" href ="assets/css/form.css">
     </head>
 
     <body>
@@ -22,7 +22,7 @@
         <input type ="text">
         <label for = "content">Content</label>
         <input type ="text">
-        <button>Submit</button>
+        <button id =submitButton> Submit</button>
         </form>
          </div> 
 
@@ -32,6 +32,6 @@
 
 
         </main>
-        <script src="assets/js/blog.js"></script>
+        <script src="assets/js/form.js"></script>
     </body>
 </html>
