added display flex for main header form created outline of front

--- a/index.html
+++ b/index.html
@@ -9,19 +9,19 @@
     </head>
 
     <body>
-        <header>Welcome</header>
-        <nav><button>sunshine <!-- button switch inside nav --></button></nav>
+        <header>
+        <button>sunshine <!-- button switch inside nav --></button></header>
 
         <main>
          <div class="rightcontainer"><!--rightside -->
         <h2>Tell me.. what is on your mind ?</h2>
         <form>
-        <label for = "uname"> Username</label>    
+        <label for = "uname"> Username</label>  
         <input type="text">
         <label for = "title">Title</label>
         <input type ="text">
         <label for = "content">Content</label>
-        <input type ="text">
+        <textarea></textarea>
         <button id =submitButton> Submit</button>
         </form>
          </div> 
