added h1 instead of h2

--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 
     <body>
         <header>
-        <button>sunshine <!-- button switch inside nav --></button></header>
+        <button id =sunshine>sunshine <!-- button switch inside nav --></button></header>
 
         <main>
          <div class="rightcontainer"><!--rightside -->
-        <h2>Tell me.. what is on your mind ?</h2>
+        <h1>Tell me.. what is on your mind ?</h1>
         <form>
         <label for = "uname"> Username</label>  
         <input type="text">
