added toggle button in html and css

--- a/index.html
+++ b/index.html
@@ -9,13 +9,12 @@
     </head>
 
     <body>
-        <header>
-        <button id =sunshine>sunshine <!-- button switch inside nav --></button></header>
+        <header><button id =sunshine class="toogle">sunshine <!-- button switch inside nav --></button></header>
 
         <main>
          <div class="rightcontainer"><!--rightside -->
         <h1>Tell me.. what is on your mind ?</h1>
-        <form>
+        <form id ="form">
         <label for = "uname"> Username</label>  
         <input type="text">
         <label for = "title">Title</label>
