--- a/index.html
+++ b/index.html
@@ -9,19 +9,20 @@
     </head>
 
     <body>
-        <header><button id =sunshine class="toogle">sunshine <!-- button switch inside nav --></button></header>
+        <header><button id ="sunshine">sunshine <!-- button switch inside nav --></button></header>
 
         <main>
          <div class="rightcontainer"><!--rightside -->
         <h1>Tell me.. what is on your mind ?</h1>
         <form id ="form">
-        <label for = "uname"> Username</label>  
-        <input type="text">
+        <label for = "username"> Username</label>  
+        <input type="text" id="username" name="username" required>
         <label for = "title">Title</label>
-        <input type ="text">
+        <input type ="text" id="title" name="title" required>
         <label for = "content">Content</label>
-        <textarea></textarea>
-        <button id =submitButton> Submit</button>
+        <textarea id="content" name="content"></textarea>
+
+        <button type="submit" id ="submitButton"> Submit</button>
         </form>
          </div> 
 
