--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
         <h1>Tell me.. what is on your mind ?</h1>
         <form id ="form">
         <label for = "username"> Username</label>  
-        <input type="text" id="username" name="username" required>
+        <input type="text" id="username" name="username" required></input>
         <label for = "title">Title</label>
-        <input type ="text" id="title" name="title" required>
+        <input type ="text" id="title" name="title" required></input>
         <label for = "content">Content</label>
         <textarea id="content" name="content"></textarea>
 
