added backround checkbox to toggle backround color when swithched by using a add event listrenr and theme switcher

--- a/blog.html
+++ b/blog.html
@@ -7,9 +7,15 @@
     <link rel="stylesheet" href="assets/css/blog.css">
 </head>
 <body>
-    <header> <h1>Blog Content</h1>
+    <div class = "everything">
+    <header> 
+        <h1>Blog Content</h1>
         <button id="back">back</button>
-        <button id ="sunshine">sunshine</button>
+        <lable class ="switch">
+            <input type ="checkbox" id ="sunshine">
+            <span class ="slider"></span>
+            <label>
+
     </header>
     <main>
         <h2>Title</h2>
@@ -22,6 +28,7 @@
         <h3>made by</h3>
     <p><a href="https://s-via.github.io/Digital-Journey/" atl="portfolio link">link</a></p>
 </footer>
+</div>
   <script src="assets/js/blog.js"></script>  
 </body>
 </html>
