added backround color for light in css

--- a/blog.html
+++ b/blog.html
@@ -9,7 +9,7 @@
 <body>
     <div class = "everything">
     <header> 
-        <h1>Blog Content</h1>
+        Blog Content
         <button id="back">back</button>
         <lable class ="switch">
             <input type ="checkbox" id ="sunshine">
