incorporated a link into the back button

--- a/blog.html
+++ b/blog.html
@@ -10,7 +10,8 @@
     <div class = "everything">
     <header> 
         Blog Content
-        <button id="back">back</button>
+        <a href="file:///Users/silvia/bootcamp/Four-Personal-Blog/index.html">
+        <button id="back">back</button></a>
         <lable class ="switch">
             <input type ="checkbox" id ="sunshine">
             <span class ="slider"></span>
@@ -29,6 +30,7 @@
     <p><a href="https://s-via.github.io/Digital-Journey/" atl="portfolio link">link</a></p>
 </footer>
 </div>
-  <script src="assets/js/blog.js"></script>  
+  <script src="assets/js/blog.js"></script> 
+  <script src="assets/js/form.js"></script> 
 </body>
 </html>
