draft steps to add value in an object to store username, title, content push it to a spefic array to pull into local storage using parse and then store into localstorage using stringfy to link document.location to my blog html

--- a/blog.html
+++ b/blog.html
@@ -22,7 +22,9 @@
         <h2>Title</h2>
         <p>Content</p>
 
-        
+        <section class="blogcontainer">
+
+        </section>
         
     </main>
     <footer>
