moved back span

--- a/blog.html
+++ b/blog.html
@@ -13,7 +13,9 @@
         <a href="file:///Users/silvia/bootcamp/Four-Personal-Blog/index.html">
         <button id="back">back</button></a>
         <lable class ="switch">
-        <span class ="slider"><input type ="checkbox" id ="sunshine"></span>
+    
+        <input type ="checkbox" id ="sunshine">
+        <span class ="slider"></span>
         <label>
             
 
