added border style for h3 in blog css

--- a/blog.html
+++ b/blog.html
@@ -30,8 +30,8 @@
         
     </main>
     <footer>
-        <h3>made by</h3>
-    <p><a href="https://s-via.github.io/Digital-Journey/" atl="portfolio link">link</a></p>
+        <h3>Created by Silvia</h3>
+    <p><a href="https://s-via.github.io/Digital-Journey/" atl="portfolio link">My Portfolio</a></p>
 </footer>
 </div>
   <script src="assets/js/blog.js"></script> 
