removed <p> in blog .html

--- a/blog.html
+++ b/blog.html
@@ -21,8 +21,8 @@
 
     </header>
     <main>
-        <h2>Blog</h2>
-        <p>Enjoy the Content</p>
+        <h2>Enjoy the content</h2>
+        
 
         <section class="blogcontainer">
 
