added pseuso code to line 29

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </head>
 
     <body>
-        <header><button id ="sunshine">sunshine <!-- button switch inside nav --></button></header>
+        <header><button id ="sunshine"><!-- button switch inside nav --></button></header>
 
         <main>
          <div class="rightcontainer"><!--rightside -->
